lustre/utils/obd.c
@@ -3299,10 +3299,8 @@ static int pool_cmd(enum lcfg_command_type cmd,
                 lustre_cfg_bufs_set_string(&bufs, 2, ostname);
 
         lcfg = lustre_cfg_new(cmd, &bufs);
-        if (IS_ERR(lcfg)) {
-                rc = PTR_ERR(lcfg);
-                return rc;
-        }
+	if (lcfg == NULL)
+		return rc;
 
         memset(&data, 0, sizeof(data));
         rc = data.ioc_dev = get_mgs_device();
